--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ header{
 
 #hero #computadora{
     display: inline-block;
-    width: 100%;   
+    width: 100%;  
+    height: 400px; 
 }
 
 #hero .info-container{
@@ -62,21 +63,36 @@ header{
 main{
     padding: 100px;
 }
+footer{
+    width: 100%;
+    height: 100px;
+    background: #b5b5b5; 
+}
 footer .social-icons{
+    
     display: flex;
     justify-content: center;
     margin-top: 40px;
     margin-bottom: 50px;
+    list-style: none;
+}
+footer .social-icons li{
+    margin-left: 8px;
 }
  footer .social-icons .social-icon{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: blue;
     padding: 15px;
-    margin-left: 8px;
     border-radius: 6px;
  }
 
-
-
+footer .social-icons #LinkedIn{
+    background: #0077b0;
+}
+footer .social-icons #GitHub{
+    background: #23272d;
+}
+footer .social-icons #Twitter{
+    background: #1da1f2;
+}
