--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ header{
 #hero .info-container .info{
     margin-left: 20px;
     font-weight: bold;
+    width: calc(100% - 200px);
 }
 #hero .info-container .info span{
     display: inline-block;
@@ -67,6 +68,7 @@ footer{
     width: 100%;
     height: 100px;
     background: #b5b5b5; 
+
 }
 footer .social-icons{
     
@@ -85,6 +87,7 @@ footer .social-icons li{
     align-items: center;
     padding: 15px;
     border-radius: 6px;
+    margin-top: 20px;
  }
 
 footer .social-icons #LinkedIn{
