--- a/css/style.css
+++ b/css/style.css
@@ -100,4 +100,18 @@ footer .social-icons #Twitter{
     background: #1da1f2;
 }
 
-
+@media(max-width: 599px){
+    #hero #computadora{
+        width: 100%;  
+        height: 200px; 
+    }
+    #hero .info-container #foto{
+        width: 80px;
+        height: 90px;
+    }
+    #hero .info-container .info{
+        margin-left: 20px;
+        font-weight: bold;
+        width: calc(100% - 80px);
+    }
+}
